data/derived/fa15/progs/unify/prog0581.ml.out
Characters 14-36:
  let _ =  eval (Op(VarX, VarY, VarY));;
                ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
